# Copyright (c) Facebook, Inc. and its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# --------------------------------------------------------------------------
# Copyright (c) ByteDance Ltd. and/or its affiliates.
# SPDX-License-Identifier: Apache-2.0
#
# This file has been modified by ByteDance Ltd. and/or its affiliates on
# 2025-11-11.
#
# Original file was released under the Apache License 2.0,
# with the full license text available at:
#     http://www.apache.org/licenses/LICENSE-2.0
#
# This modified file is released under the same license.
# --------------------------------------------------------------------------

add_library(
  bolt_vector
  BaseVector.cpp
  ComplexVector.cpp
  ConstantVector.cpp
  DecodedVector.cpp
  FlatVector.cpp
  LazyVector.cpp
  SelectivityVector.cpp
  SequenceVector.cpp
  SimpleVector.cpp
  VariantToVector.cpp
  VectorEncoding.cpp
  VectorPool.cpp
  VectorPrinter.cpp
  VectorSaver.cpp
  VectorStream.cpp
)

target_link_libraries(
  bolt_vector
  bolt_encode
  bolt_memory
  bolt_time
  bolt_type_base
  bolt_buffer
  ${ICU_LIBRARIES}
  re2::re2
)

add_subdirectory(arrow)
add_subdirectory(fuzzer)

if(${BOLT_BUILD_TESTING})
  add_subdirectory(tests)
elseif(${BOLT_BUILD_TEST_UTILS})
  add_subdirectory(tests/utils)
endif()

if(${BOLT_ENABLE_BENCHMARKS})
  add_subdirectory(benchmarks)
endif()
